--- a/starbuzz.css
+++ b/starbuzz.css
@@ -1,21 +1,87 @@
-body { 
+body {
   background-color: #b5a789;
   font-family:      Georgia, "Times New Roman", Times, serif;
   font-size:        small;
   margin:           0px;
 }
 
-/* 
+/*
 	height messes up the headers in the blog in the articles
 	it's only appropriate for the top header.
 	add a class (new with blog)
 	Affects the 3 #header rules for the main header below
 	In HTML: add class="top" to main header in index.html and blog.html
 */
+#gridContainer{
+  display: grid;
+  grid-gap: 10px;
+  margin: 10px;
+  grid-template-areas:
+
+  "h  h  h  h  h  h h h h"
+  "n  n  n n  n  n n n n"
+  "s1 s2 s2 s2 s2 s2 s2 a a"
+  "f  f  f f  f  f f f f"
+  /* 단순 분할
+  "h h h"
+  "n n n"
+  "s1 s2 a"
+  "f f f"
+  */
+}
+header{
+grid-area: h;
+}
+nav {
+grid-area: n;
+}
+section#drinks {
+grid-area: s1;
+}
+section#main {
+grid-area: s2;
+}
+aside {
+grid-area: a;
+}
+footer {
+grid-area:f;
+}
+
+/*
+header{
+//  grid-area: h;
+grid-column: 1 /7;
+grid-row: 1 / 2;
+}
+nav {
+//    grid-area: n;
+grid-column: 1 /7;
+grid-row: 2;
+}
+section#drinks {
+//  grid-area: s1;
+grid-column: 1 / 2;
+grid-row: 3/ 6;
+}
+section#main {
+//  grid-area: s2;
+grid-column: 2 /5;
+grid-row: 3/6;
+}
+aside {
+  //grid-area: a;
+  grid-column: 6/ 7;
+  grid-row: 3/6;
+}
+footer {
+//  grid-area:f;
+grid-column: 1 /7;
+grid-row: 7;
+}*/
 
 header.top {
   background-color: #675c47;
-  margin: 10px 10px 0px 10px;
   height:           108px;
 }
 
@@ -27,7 +93,6 @@ header.top img#headerSlogan {
 /* nav new in blog */
 nav {
 	background-color: #efe5d0;
-	margin: 10px 10px 10px 10px;
 }
 nav ul {
 	margin: 0px;
@@ -48,8 +113,10 @@ div#gridContainer {
 
 section#drinks {
     background-color: #efe5d0;
-    width: 20%;
+    //width: 50%;
     padding: 15px;
+
+
     vertical-align: top;
 }
 
@@ -57,6 +124,7 @@ section#main {
   background:       #efe5d0 url(images/background.gif) top left;
   font-size:        105%;
   padding:          15px;
+
   vertical-align: top;
 }
 
@@ -64,6 +132,7 @@ aside {
   background:       #efe5d0 url(images/background.gif) bottom right;
   font-size:        105%;
   padding:          15px;
+//  width:25%;
   vertical-align: top;
 }
 
@@ -72,7 +141,6 @@ footer {
   color:            #efe5d0;
   text-align:       center;
   padding:          15px;
-  margin: 0px 10px 10px 10px;
   font-size:        90%;
 }
 
@@ -111,7 +179,7 @@ nav ul li a:link, nav ul li a:visited {
 	font-weight: bold;
 
 	/* optional! very hard to see although does help */
-	text-shadow: 1px 1px 3px #e2c2c2; 
+	text-shadow: 1px 1px 3px #e2c2c2;
 
 	/* try this and see if you like it */
 	text-transform: uppercase;
